  - to reduce conversions use as much as possible the system string
    type in the tools

Performance improvement
* map (file offset and size) items and item values first read on demand
* pre allocate item array entries

library
* what about multiple alias entries 0x6001 of a single item?

Tools
* nk2export
  - add export mode like pffexport
  - export alias files instead of item values
* nk2info
  - create info handle ?

Deployment:
* create debian package files
* implement macosx package files (add to configure scripts)

20091016
* correction in error output

20091015
* minor adjustments

20091013
* several textual fixes

20091008
* worked on msvscpp files
* worked on native windows compilation

20091004
* worked on item API
* worked on nk2tools

20091003
* updated configure.ac
* updated common, linbuna, libbfio, libsystem
* updated array and list type
* updated value types with libpff version
* updated libfmapi
* added libfdatetime support
* implemented utf16 string item entry functions
* updated manuals
* worked on item API
* worked on nk2tools
* updated acinclude

20090911
* updated libsystem

20090907
* small fixes
* worked on msvcpp files
* removed GUID generation code

20090906
* textual changes

20090905
* updated manuals
* updated nk2input codepage detection
* implemented libbfio open

20090904
* added libtool m4 directory support
* updated common, liberror, libfmapi, libuna, libbfio
* added libnotify, libsystem
* updated spec file to handle empty requires and build requires
* updated libnk2_notify, libnk2_error, libnk2_support
* updated configure
* updated codpage definitions
* worked on libsystem integration
* updated guid and filetime
* added value_type refactored item and item_values

20090524
* updated libbfio
* implemented libbfio offset tracking for debug output
* updated common/types.h to be generated by autoconf
* moved error functions into libnk2_error.[ch]
* moved signal abort function into libnk2_file.[ch]
* removed unused code